# excel-splitter

./: .gitignore  CHANGELOG.md  CHANGELOG_ja.md  CONTRIBUTING.md  CONTRIBUTING_ja.md  Plan.md  README.md  README_ja.md  SECURITY.md  SECURITY_ja.md  Spec.md  pyproject.toml  spec.md
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: 20260127implimentation-plan.md
docs/assets/: example.key
docs/examples/: 20260121AIオーディター形式サンプルコーディング規約.xlsx  シート分割サンプル.xlsx
docs/examples/output/: 20260121AIオーディター形式サンプルコーディング規約__SHEET__コーディングスタイル（1）.xlsx  20260121AIオーディター形式サンプルコーディング規約__SHEET__コーディング規約一覧.xlsx  20260121AIオーディター形式サンプルコーディング規約__SHEET__命名規則全般（1）.xlsx  シート分割サンプル__SHEET__Sheet1.xlsx  シート分割サンプル__SHEET__Sheet2.xlsx  シート分割サンプル__SHEET__Sheet3.xlsx
src/excel_splitter/: cli.py  hyperlinks.py  row_splitter.py  splitter.py  utils.py
tests/: create_manual_test_data.py  create_test_data.py  test_integration.py  test_utils.py
tests/fixtures/: manual_test.xlsx
