[tool.poetry]
name = "excel-splitter"
version = "0.1.0"
description = "A CLI tool to split Excel files into individual sheets or row chunks while preserving hyperlinks."
authors = ["hdkworks"]
readme = "README.md"
packages = [{include = "excel_splitter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.2"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
excel-splitter = "excel_splitter.cli:main"
