[project]
name = "excel-splitter"
version = "0.1.1"
description = "A CLI tool to split Excel files into individual sheets or row chunks while preserving hyperlinks."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "hdkworks" }
]
dependencies = [
    "openpyxl>=3.1.2",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
excel-splitter = "excel_splitter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_splitter"]
